--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -24,21 +24,26 @@
                                     <rect key="frame" x="0.0" y="0.0" width="383" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6N4-Mk-cud">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6N4-Mk-cud">
                                             <rect key="frame" x="20" y="6" width="67" height="67"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="67" id="HZn-fh-Jfl"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INO-hR-7zN">
-                                            <rect key="frame" x="95" y="29" width="299" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INO-hR-7zN">
+                                            <rect key="frame" x="95" y="29" width="288" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="INO-hR-7zN" firstAttribute="top" secondItem="j48-nE-kpe" secondAttribute="topMargin" constant="18" id="1F0-wM-GVh"/>
                                         <constraint firstItem="INO-hR-7zN" firstAttribute="leading" secondItem="6N4-Mk-cud" secondAttribute="trailing" constant="8" id="3Dr-xH-4iZ"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="INO-hR-7zN" secondAttribute="bottom" constant="17" id="ieO-Hw-nA3"/>
-                                        <constraint firstItem="INO-hR-7zN" firstAttribute="trailing" secondItem="j48-nE-kpe" secondAttribute="trailingMargin" id="sci-Zs-ITV"/>
+                                        <constraint firstItem="INO-hR-7zN" firstAttribute="centerY" secondItem="6N4-Mk-cud" secondAttribute="centerY" id="7UB-H5-xFp"/>
+                                        <constraint firstItem="6N4-Mk-cud" firstAttribute="leading" secondItem="j48-nE-kpe" secondAttribute="leadingMargin" id="D37-au-27w"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="INO-hR-7zN" secondAttribute="trailing" constant="-8" id="NJB-te-RVU"/>
+                                        <constraint firstAttribute="bottom" secondItem="6N4-Mk-cud" secondAttribute="bottom" constant="5" id="Zg3-qw-V3x"/>
+                                        <constraint firstItem="6N4-Mk-cud" firstAttribute="top" secondItem="j48-nE-kpe" secondAttribute="top" constant="6" id="bL3-L2-Fsz"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -59,7 +64,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rOb-U3-CyQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2089.8550724637685" y="2036.3839285714284"/>
+            <point key="canvasLocation" x="-2091.304347826087" y="2036.3839285714284"/>
         </scene>
         <!--People Detail View Controller-->
         <scene sceneID="8ga-n7-Q14">
@@ -73,29 +78,36 @@
                                 <rect key="frame" x="2" y="111" width="410" height="390"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKs-Ts-Sh1">
-                                <rect key="frame" x="20" y="579" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7a-Iz-gxS">
-                                <rect key="frame" x="20" y="637" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLr-vG-bBM">
-                                <rect key="frame" x="20" y="608" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nB5-bJ-M0c">
+                                <rect key="frame" x="20" y="579" width="374" height="77"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dKs-Ts-Sh1">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLr-vG-bBM">
+                                        <rect key="frame" x="0.0" y="28.333333333333371" width="374" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7a-Iz-gxS">
+                                        <rect key="frame" x="0.0" y="56.666666666666636" width="374" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="ZM0-co-Dpx" firstAttribute="bottom" secondItem="nB5-bJ-M0c" secondAttribute="bottom" constant="206" id="ISZ-88-GqI"/>
+                            <constraint firstItem="nB5-bJ-M0c" firstAttribute="leading" secondItem="ZM0-co-Dpx" secondAttribute="leading" constant="20" id="wZX-kH-orc"/>
+                            <constraint firstItem="ZM0-co-Dpx" firstAttribute="trailing" secondItem="nB5-bJ-M0c" secondAttribute="trailing" constant="20" id="wul-J3-ekk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ZM0-co-Dpx"/>
                     </view>
                     <navigationItem key="navigationItem" id="IS3-9R-wzg"/>
